# fast_api

./: .gitignore  Pipfile  README.md  setup.cfg  setup.py
fast_api/fast/: __init__.py  cmdline.py  dao.py  db.py  dependencies.py  log.py  middlewares.py  models.py  routes.py  schemas.py  server.py  services.py  views.py
fast_api/fast/config/: __init__.py  settings.yml
