[metadata]
name = fast_api
version = attr: fast.__version__
author = zhouys
author_email = zhouys618@163.com
description = This is example blog system.
keywords = api fast
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8

[options]
python_requires > = 3.7
include_package_data = True
packages = find:
package_dir =
    =fast_api
install_requires =
    click
    dynaconf
    sqlalchemy
    mysqlclient
    pydantic
    fastapi
    uvicorn
    alembic


[options.packages.find]
where = fast_api

[options.entry_points]
console_scripts =
    fast_api = fast.cmdline:main


[options.package_data]
fast_api.config = settings.yml

[options.data_files]
fast_api = fast_api/fast/config/settings.yml
